basic random tool

--- a/src/app/util/forms/team-form/team-form.component.html
+++ b/src/app/util/forms/team-form/team-form.component.html
@@ -50,7 +50,8 @@
         spellcheck="false"
         class="w-2/3 p-2 bg-{{ color }}-100 rounded resize-none h-96 max-w-128"
         placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
-      ></textarea>
+        >{{ importText() }}</textarea
+      >
     </div>
     <div class="flex justify-center w-full">
       <button
