--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,29 +1,17 @@
-<div class="flex justify-center w-full h-full px-4 py-8">
+<div
+  class="flex flex-col items-center w-full h-full overflow-y-auto px-4 py-8 space-y-8"
+>
+  <h1 class="w-full text-4xl text-center font-nasa">Tools</h1>
   <div class="w-full space-y-8 max-w-128">
-    <h1 class="w-full text-4xl text-center font-nasa">Tools</h1>
-    <div
-      class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-250 bg-menu-300 border-menu-400"
-      routerLink="replay-analyzer"
-    >
-      <h2 class="w-full text-2xl text-center font-nasa">Replay Analyzer</h2>
-    </div>
-    <div
-      class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-250 bg-menu-300 border-menu-400"
-      routerLink="time-converter"
-    >
-      <h2 class="w-full text-2xl text-center font-nasa">Time Converter</h2>
-    </div>
-    <div
-      class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-250 bg-menu-300 border-menu-400"
-      routerLink="pokemon-search"
-    >
-      <h2 class="w-full text-2xl text-center font-nasa">Pokemon Search</h2>
-    </div>
-    <div
-      class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-250 bg-menu-300 border-menu-400"
-      routerLink="quick-matchup"
-    >
-      <h2 class="w-full text-2xl text-center font-nasa">Quick Matchup</h2>
-    </div>
+    @for (tool of tools; track $index) {
+      <div
+        class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-200 bg-menu-300 border-menu-400"
+        [routerLink]="tool.link"
+      >
+        <h2 class="w-full text-2xl text-center font-nasa">
+          {{ tool.title }}
+        </h2>
+      </div>
+    }
   </div>
 </div>
